# Student-chatbot

./: .gitignore  app.py  build.ps1  build.sh  chatbot.db  chatbot_ai.db  chatbot_model.pkl  chatbot_model.py  database.py  dowmload_nltk.py  pyproject.toml  requirements.txt  setup.py
data/: responses.json  training_data.json
static/css/: style.css
static/js/: script.js
templates/: index.html
