[tool.poetry]
name = "student-chatbot"
version = "0.1.0"
description = "Student Chatbot Flask Application"
authors = ["Tapan Khandelwal <khandelwaltapan7@gmailcom>"]

[tool.poetry.dependencies]
python = "^3.9"
flask = "^2.3.0"
gunicorn = "^20.1.0"
flask-sqlalchemy = "^3.0.0"
flask-cors = "^4.0.0"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"